[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
description = "Runs `rustc --print cfg` and parses the output"
documentation = "https://docs.rs/rustc-cfg"
keywords = ["cfg", "rustc", "target", "parser"]
license = "MIT OR Apache-2.0"
name = "rustc-cfg"
repository = "https://github.com/japaric/rustc-cfg"
version = "0.5.0"

[dependencies]
thiserror = "1.0"
